[package]
name = "exoneum_core"
version = "0.1.0"
authors = ["Roger Wilco <roger.wilco@protonmail.com>"]
homepage = "https://rogerwilcos.github.io"
repository = "https://github.com/rogerwilcos/exoneum"
readme = "README.md"
license = ""
publish = false

[dependencies]
display_derive = "0.0.0"
exonum = "0.7.1"
exonum-time = "0.7.0"
exonum-configuration = { version = "0.7.0", path = "../configuration" }
failure = "0.1.1"
failure_derive = "0.1.1"
iron = "0.6.0"
bodyparser = "0.8.0"
log = "0.4.0"
mount = "0.4.0"
rand = "0.4.2"
router = "0.6.0"
serde = "1.0.0"
serde_derive = "1.0.0"
serde_json = "1.0.0"
byteorder = "1.2.1"
enum-primitive-derive = "0.1.2"
num-traits = "0.2.2"
chrono = "0.4.2"
pnet = "0.21.0"
# crust = "0.30.0"

[dev-dependencies]
exonum-testkit = "0.7.0"
pretty_assertions = "0.5.1"